Move message for periodic notifications to config
- also do not wrongly inform about failed ssl checks

--- a/config.json
+++ b/config.json
@@ -9,6 +9,10 @@
         "username": "",
         "from": "",
         "to": ""
-    }
+    },
+    "periodic-message": [
+        "test line 1",
+        "    test line 2"
+    ]
 }
 
